--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-i18n-extract",
+  "name": "@nedap/vue-i18n-extract",
   "description": "Manage vue-i18n localization with static analysis",
-  "version": "2.0.8",
+  "version": "2.0.10",
   "scripts": {
     "build": "rm -fr dist && microbundle --target node -f umd,modern",
     "dev": "microbundle watch --target node",
@@ -22,7 +22,13 @@
     "bin",
     "dist"
   ],
-  "repository": "https://github.com/Spittal/vue-i18n-extract",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nedap/vue-i18n-extract.git"
+  },
   "homepage": "https://github.com/Spittal/vue-i18n-extract",
   "bugs": "https://github.com/Spittal/vue-i18n-extract/issues",
   "keywords": [
